style: scrollbar fixing

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,24 +29,3 @@ canvas {
 body {
   box-sizing: border-box;
 }
-
-@layer base {
-  ::-webkit-scrollbar {
-    width: 10px; 
-  }
-
-  ::-webkit-scrollbar-track {
-    margin-top: 7rem;
-    border-radius: 5px;
-    background: #f1f1f1; 
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-    border-radius: 5px; 
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-}
